--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,38 +1,9 @@
-#map{
-	width: 100vw;
-	height: 100vh;
-}
-body{
-	height: 0;
-	margin: 0;
+body {
+    margin: 0;
+    padding: 0;
 }
 
-.leaflet-touch .leaflet-control-layers-toggle {
-    width: 44px;
-    height: 44px;
-}
-.leaflet-retina .leaflet-control-layers-toggle {
-    background-image: url(images/layers-2x.png);
-    background-size: 26px 26px;
-}
-leaflet-container a {
-    color: #0078A8;
-}
-.leaflet-container a {
-    -webkit-tap-highlight-color: rgba(51, 181, 229, 0.4);
-}
-.leaflet-control-layers-toggle {
-    background-image: url(images/layers.png);
-    width: 36px;
-    height: 36px;
-}
-.leaflet-bar a, .leaflet-control-layers-toggle {
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    display: block;
-}
-:-webkit-any-link {
-    color: -webkit-link;
-    cursor: pointer;
-    text-decoration: underline;
+#map {
+    height: 100vh;
+    width: 100cw;
 }
